@@ -1,10 +1,16 @@
+TAG: mcvload-4-3-4-10
+DATE: 06/28/2010
+STAFF: sc
+CHANGES: Added runAddColumns 
+
+TAG: mcvload-4-3-4-9
 TAG: mcvload-4-3-4-8
 DATE: 06/28/2010
 STAFF: sc
 CHANGES: TR6839 Marker Types
 1) mcvload.config.default - added ADD_COLUMNS_EXT and ADD_COLUMNS_LOGFILE
    to support new cleansing script which adds columns
-2) addColumns.py, addColumns.sh - if any records missing column 9 and/or 10
+2) addColumns.py, addColumns - if any records missing column 9 and/or 10
    creates a new file with these columns
 
 TAG: mcvload-4-3-4-7
